# alves-cli

./: Cargo.toml  setup.sh  teste.sh
src/: main.rs
src/commands/: cpf.rs  mod.rs  setup.rs  setup_dev_config.rs  setup_neovim.rs  setup_nvm.rs  setup_zsh.rs
src/common/: brew.rs  constants.rs  cross_install.rs  dev_config.rs  logger.rs  mod.rs  source_env.rs  utils.rs
src/scripts/: node_lts_install.sh
