[package]
name = "alves-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
regex = "1.5.6"
unicode-segmentation = "1.9.0"
rand = "0.8.5"
colored = "2.0.0"
fs_extra = "1.3.0"
home = "0.5.5"